# stm32_f4_dicovery_cmake

./: .mxproject  CMAKE_trial.ioc  CMakeLists.txt  CMakePresets.json  Generate_CMAKE_Build_Files.ps1  Makefile  README.md
Inc/: usbh_conf.h
Src/: main.c  stm32f4xx_hal_msp.c  usbh_conf.c
